# chopper

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  aarch64.json
.github/: dependabot.yml
.github/workflows/: musl_build.yml  publish.yml  test.yml
src/: main.rs  records.rs  trimmers.rs  utils.rs
test-data/: other-test.fastq  random_contam.fa  testGC.fastq
