[package]
name = "chopper"
version = "0.9.0"
authors = ["wdecoster <decosterwouter@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "2.0.1"
clap = { version = "4.5.16", features = ["derive"] }
rayon = "1.7.0"
approx = "0.5.1"
minimap2 = "0.1.20"
flate2 = { version = "1.0.31", features = [
    "zlib-ng",
], default-features = false }
xz2 = "0.1.7"
bzip2 = "0.4.4"
atty = "0.2.14"
