[package]
name = "chopper"
version = "0.10.0"
authors = ["wdecoster <decosterwouter@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A tool to filter fastq files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "2.2.0"
clap = { version = "4.5.37", features = ["derive"] }
crossbeam = "0.8"
rayon = "1.7.0"
approx = "0.5.1"
minimap2 = "0.1.23+minimap2.2.28"
flate2 = { version = "1.1.0", features = [
    "zlib-ng",
], default-features = false }
xz2 = "0.1.7"
bzip2 = "0.5.2"
